--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,13 +17,23 @@
 <div>
     <div id="navigation" ui-view="navigationView"></div>
     <div class="container" id="content" ui-view="contentView"></div>
-    <div id="menu" ui-view="menuView"></div>
 </div>
 
 
 <script src="router.js"></script>
-<script src="common/navigation/index.js"></script>
-<script src="common/remote/index.js"></script>
+<script src="login/service.js"></script>
+<script src="common/navigation/ctrl.js"></script>
+<script src="common/remote/ctrl.js"></script>
+
+<script src="home/service.js"></script>
+<script src="home/ctrl.js"></script>
+
+<script src="message/service.js"></script>
+<script src="message/ctrl.js"></script>
+
+<script src="signin/service.js"></script>
+<script src="signin/ctrl.js"></script>
+
 <script src="index.js"></script>
 
 </body>
