--- a/src/main/webapp/common/navigation/index.html
+++ b/src/main/webapp/common/navigation/index.html
@@ -24,14 +24,34 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#" ng-click="goState('main.home')">Accueil</a></li>
-                <li><a href="#" ng-click="goState('main.subjects')">Sujets</a></li>
             </ul>
-            <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Recherche">
-                </div>
-                <button type="submit" class="btn btn-default">Rechercher</button>
-            </form>
+
+
+            <div id="unlogged" ng-if="connect != 1" class="pull-right dropdown">
+                <button class="pull-right nav-button btn btn-default" ng-click="signin()" href="#" >Inscription</button>
+
+                <button class="nav-button btn btn-success" href="#" class="dropdown-toggle" data-toggle="dropdown">Connexion <b class="caret"></b></button>
+
+                <ul id="login-dropdown" class="dropdown-menu">
+                    <form class="form-horizontal" id="login-form" ng-submit="login()">
+                        <li><input type="text" id="username" name="username" ng-model="username" placeholder="identifiant"/></li>
+                        <li><input type="password" id="password" name="password" ng-model="password" placeholder="mot de passe"/></li>
+                        <li>
+                            <button class="btn btn-primary">Connexion</button>
+                        </li>
+                    </form>
+                </ul>
+            </div>
+
+            <div ng-if="connect === 1" class="dropdown pull-right">
+                <button class="nav-button btn btn-default" href="#" class="dropdown-toggle" data-toggle="dropdown">{{fullname}} <b class="caret"></b></button>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Mon profil</a></li>
+                    <li><a href="#" ng-click="logout()">Deconnexion</a></li>
+                </ul>
+            </div>
+
+
         </div>
         <!-- /.navbar-collapse -->
     </nav>
